--- a/o/on/onl/onlineconversion.com.html
+++ b/o/on/onl/onlineconversion.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the onlineconversion.com privacy policy that was archived on 2004-04-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040402004150id_/http%3A//www.onlineconversion.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the onlineconversion.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207150241id_/http%3A//www.onlineconversion.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -7,9 +7,9 @@
 <meta name="DESCRIPTION" content="The Privacy Statement for OnlineConversion.com">
 <meta name="KEYWORDS" content="privacy, statement, information">
 
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="/style.css" rel="stylesheet" type="text/css">
 
-<script language="Javascript" src="misc_functions.js" type="text/javascript"></script>
+<script language="JavaScript" src="/misc_functions.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -23,11 +23,24 @@
     <td width="620" valign="top" colspan="2">
       <table border="0" width="100%" cellspacing="0" cellpadding="0">
         <tbody><tr>
-          <td width="100%"><img src="rf_logo.gif" width="142" height="53" border="0"></td>
-          <td width="10"><img src="spacer.gif" height="1" width="10" alt=""></td>
-          <td width="468" valign="top">
+          <td width="100%"><img src="/rf_logo.gif" width="142" height="53" border="0"></td>
+          <td width="10"><img src="/spacer.gif" height="1" width="10" alt=""></td>
+          <td width="468" height="74" valign="middle">
 <!-- AD001 Begin -->
-<script src="http://www.textads.biz/getNextAd.jsp?siteref=51c5f82c098952f4f72985ef850780c4&amp;adNum=1"></script>
+<script type="text/javascript"><!--
+google_ad_client = "pub-2354618205882486";
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = "468x60_as";
+google_ad_channel ="3760170698";
+google_color_border = "000000";
+google_color_bg = "F0F0F0";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 <!-- AD001 End -->
           </td>
         </tr>
@@ -36,7 +49,7 @@
   </tr>
 
   <tr>
-    <td width="620" height="1" colspan="2"><img src="black.gif" width="620" height="1" alt=""></td>
+    <td width="620" height="1" colspan="2"><img src="/black.gif" width="620" height="1" alt=""></td>
   </tr>
   <tr>
   <td width="150" height="17" class="nav">&nbsp;&nbsp;<script language="JavaScript" type="text/javascript"><!--
@@ -56,7 +69,7 @@
 <td width="470" height="17" align="right" class="nav">| <a href="/">Home</a> | <a href="/cgi-bin/search.cgi">Search</a> | <a href="/faq.htm">FAQ</a> | <a href="/forum/">Message Forum</a> | <a href="/new.htm"><span class="red">What's New</span></a> | <a href="/contact.htm">Contact Us</a> | <a href="javascript:tell_friend();">Tell a Friend</a> | &nbsp;</td>
 </tr>
 
-<tr><td width="620" valign="top" align="left" colspan="2"><img src="black.gif" width="620" height="1" alt="" border="0"></td></tr>
+<tr><td width="620" valign="top" align="left" colspan="2"><img src="/black.gif" width="620" height="1" alt="" border="0"></td></tr>
 </tbody></table>
 
 <table border="0" cellspacing="0" cellpadding="0" width="620">
@@ -112,7 +125,6 @@
 </blockquote>
 
 <!-- Center Bottom -->
-
 <center>
 <p>&nbsp;</p>
 <!-- ---------- Advertising.com Banner Code -------------- --> 
@@ -120,7 +132,7 @@
 var bnum=new Number(Math.floor(99999999 * Math.random())+1); 
 document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); 
 document.write('SRC="http://servedby.advertising.com/site=80258/size=300250/bnum='+bnum+'/optn=1"></SCR'+'IPT>'); 
-</script><script language="JavaScript" src="http://servedby.advertising.com/site=80258/size=300250/bnum=79353907/optn=1"></script> 
+</script><script language="JavaScript" src="http://servedby.advertising.com/site=80258/size=300250/bnum=15337119/optn=1"></script> 
 <!-- ---------- Copyright 2000, Advertising.com ---------- -->
 </center>
 <!-- End Center Bottom -->
@@ -131,7 +143,7 @@ document.write('SRC="http://servedby.advertising.com/site=80258/size=300250/bnum
 
 </td>
 
-<td width="1" bgcolor="#000000" valign="top"><img src="spacer.gif" width="1" height="2" alt="" border="0"></td>
+<td width="1" bgcolor="#000000" valign="top"><img src="/spacer.gif" width="1" height="2" alt="" border="0"></td>
 
 <td width="150" valign="top" class="rightside">
 <!-- Right side Start -->
@@ -150,75 +162,31 @@ document.write('SRC="http://servedby.advertising.com/site=80258/size=300250/bnum
 <!--
 WriteQuickLinks();
 //-->
-</script>    <form name="Qform">
-      <p></p><h2>Quick Links:</h2>
-      <select size="1" name="QList" onchange="javascript:QuickHandler(document.Qform.QList);">
-        <option selected="" value="0">Select One...</option>
-        <option value="0">----------</option>
-        <option value="index.htm">Home</option>
-        <option value="cgi-bin/search.cgi">Search</option>
-        <option value="forum/">Forums</option>
-        <option value="faq.htm">FAQ</option>
-        <option value="0">----------</option>
-        <option value="acceleration.htm">Acceleration</option>
-        <option value="angles.htm">Angles</option>
-        <option value="area.htm">Area</option>
-        <option value="astronomical.htm">Astronomical</option>
-        <option value="automotive.htm">Automotive</option>
-        <option value="electric_capacitance.htm">Capacitance</option>
-        <option value="clothing.htm">Clothing</option>
-        <option value="computer.htm">Computers</option>
-        <option value="cooking.htm">Cooking</option>
-        <option value="1">Currency</option>
-        <option value="date_time.htm">Date/Time</option>
-        <option value="density.htm">Density</option>
-        <option value="length.htm">Distance</option>
-        <option value="energy.htm">Energy</option>
-        <option value="finance.htm">Finance</option>
-        <option value="flow_rate.htm">Flow Rate</option>
-        <option value="force.htm">Force</option>
-        <option value="frequency.htm">Frequency</option>
-        <option value="funstuff.htm">Fun Stuff</option>
-        <option value="html.htm">HTML</option>
-        <option value="length.htm">Length</option>
-        <option value="light.htm">Light</option>
-        <option value="weight.htm">Mass</option>
-        <option value="misc.htm">Misc</option>
-        <option value="numbers.htm">Numbers</option>
-        <option value="power.htm">Power</option>
-        <option value="pressure.htm">Pressure</option>
-        <option value="speed.htm">Speed</option>
-        <option value="temperature.htm">Temperature</option>
-        <option value="torque.htm">Torque</option>
-        <option value="date_time.htm">Time/Date</option>
-        <option value="viscosity.htm">Viscosity</option>
-        <option value="volume.htm">Volume</option>
-        <option value="weight.htm">Weight</option>
-        <option value="0">----------</option>
-        <option value="contact.htm">Contact</option>
-        <option value="license.htm">License</option>
-        <option value="new.htm">Whats New</option>
-      </select><p></p>
-    </form>
-
-
+</script>
 
 <p>Can't find something?<br>Try <a href="/cgi-bin/search.cgi">searching</a>.</p>
 <p>Are you bored?<br>Try the <a href="/funstuff.htm">Fun Stuff</a>.</p>
-<p>Support Us<br><a href="/donate.htm">Make a Donation</a></p>
+<p>Was this site helpful?<br><a href="/linking.htm">Link to Us</a> | <a href="/donate.htm">Donate</a></p>
     </td>
   </tr>  
 </tbody></table><br>
-<p><img src="black.gif" width="150" height="1" hspace="0" vspace="0" alt=""></p>
+<p><img src="/black.gif" width="150" height="1" hspace="0" vspace="0" alt=""></p>
 
 <!-- Right Side Ads -->
-<!-- ---------- Advertising.com Banner Code -------------- --> 
-<script language="JavaScript"> 
-var bnum=new Number(Math.floor(99999999 * Math.random())+1); 
-document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); 
-document.write('SRC="http://servedby.advertising.com/site=80258/size=120600/bnum='+bnum+'/optn=1"></SCR'+'IPT>'); 
-</script><script language="JavaScript" src="http://servedby.advertising.com/site=80258/size=120600/bnum=82610098/optn=1"></script> 
-<!-- ---------- Copyright 2000, Advertising.com ---------- -->
+<script type="text/javascript"><!--
+google_ad_client = "pub-2354618205882486";
+google_ad_width = 120;
+google_ad_height = 600;
+google_ad_format = "120x600_as";
+google_ad_channel ="3760170698";
+google_color_border = "000000";
+google_color_bg = "F0F0F0";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 
 </div>
 <!-- End Right Side Ads -->
@@ -227,7 +195,7 @@ document.write('SRC="http://servedby.advertising.com/site=80258/size=120600/bnum
 </td>
 </tr>
 <tr> 
-<td height="1" colspan="3"><img src="black.gif" width="620" height="1" alt=""></td>
+<td height="1" colspan="3"><img src="/black.gif" width="620" height="1" alt=""></td>
 </tr>
 </tbody></table>
 
@@ -250,7 +218,7 @@ document.write('SRC="http://servedby.advertising.com/site=80258/size=120600/bnum
 var bnum=new Number(Math.floor(99999999 * Math.random())+1); 
 document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); 
 document.write('SRC="http://servedby.advertising.com/site=80258/size=728090/bnum='+bnum+'/optn=1"></SCR'+'IPT>'); 
-</script><script language="JavaScript" src="http://servedby.advertising.com/site=80258/size=728090/bnum=93295212/optn=1"></script> 
+</script><script language="JavaScript" src="http://servedby.advertising.com/site=80258/size=728090/bnum=3250622/optn=1"></script> 
 <!-- ---------- Copyright 2000, Advertising.com ---------- -->
 <!-- AD002 End -->
 
@@ -259,12 +227,6 @@ document.write('SRC="http://servedby.advertising.com/site=80258/size=728090/bnum
 
 <!-- AD003 Begin -->
 <!-- AD003 End -->
-
-
-<!-- BEGIN LINKEXCHANGE CODE -->
-<iframe src="http://leader.linkexchange.com/X1505562/showiframe?" width="468" height="60" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a href="http://leader.linkexchange.com/X1505562/clickle" target="_top"><img width=468 height=60 border=0 ismap alt="" src="http://leader.linkexchange.com/X1505562/showle?"></a></iframe><br><a href="http://leader.linkexchange.com/X1505562/clicklogo" target="_top"><img src="http://leader.linkexchange.com/X1505562/showlogo?" width="468" height="16" border="0" ismap="" alt=""></a>
-<!-- END LINKEXCHANGE CODE -->
 
 </center>
 
