--- a/m/mo/mou/mountainroseherbs.com.html
+++ b/m/mo/mou/mountainroseherbs.com.html
@@ -1,12 +1,13 @@
-<!--The following is the downloaded HTML source of the mountainroseherbs.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606052556id_/http%3A//www.mountainroseherbs.com/privicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mountainroseherbs.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207164319id_/http%3A//www.mountainroseherbs.com/privicy.php) for the most accurate reproduction.-->
 
 <html><head><title>Mountain Rose Herbs | Privicy Policy </title>
 </head><body style="margin:0; padding:0" background="http://www.mountainroseherbs.com/bg.gif" bgcolor="#D7AC75" link="#454B00" vlink="#454B00" alink="#000000">
-<a name="top">
+
 
 
 <p class="MsoNormal"><span style="font-size:11.5pt;font-family:Arial">
+<a name="top">
 <!-- ===== START IMAGE MAPS ===== -->
 <map name="tabsmap">
 <area shape="rect" coords="258,1,336,35" href="http://www.cart32.com/cgi-bin/cart32.exe/MountainRoseHerbs-ItemList" alt="View Cart/Check Out">
@@ -28,7 +29,7 @@
 </map>
 
 <!-- ===== END IMAGE MAPS ======== -->
-</span></p><div align="left">
+</a></span></p><div align="left"><a name="top">
 <form name="searchform" method="get" action="http://search.atomz.com/search/" style="padding:0; border:0; margin:0;"><table width="100%" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td align="left" valign="top" height="88" bgcolor="#FFFFFF" colspan="2" background="http://www.mountainroseherbs.com/headerbg.gif"><table cellspacing="0" cellpadding="0" border="0" width="748"><tbody><tr><td align="left" valign="top" height="88" rowspan="2"><img src="http://www.mountainroseherbs.com/logo2.jpg" width="403" height="88" border="0" usemap="#logo2_Map"></td><td align="left" valign="top" height="53"><img src="http://www.mountainroseherbs.com/overtabs.jpg" width="345" height="53"></td></tr><tr><td align="left" valign="top" height="35" background="http://www.mountainroseherbs.com/tabsbg.gif"><img src="http://www.mountainroseherbs.com/tabs.gif" ismap="" usemap="#tabsmap" width="335" height="35" border="0"></td></tr></tbody></table></td></tr><tr><td align="center" valign="top" width="159"><img src="http://www.mountainroseherbs.com/spacer.gif" width="148" height="10">
 <!-- ====== START SIDE BAR ======= -->
 
@@ -59,7 +60,7 @@
 <a href="http://www.mountainroseherbs.com/face/face.php"><font color="#D7AC75">Facial Care</font></a><br>
 <a href="http://www.mountainroseherbs.com/tea_bev/tea_green.php"><font color="#D7AC75">Green, Black &amp; Red Teas</font></a><br>
 <a href="http://www.mountainroseherbs.com/hair/hair.php"><font color="#D7AC75">Hair Care</font></a><br>
-<a href="http://www.mountainroseherbs.com/extract/extract.php"><font color="#D7AC75">Herbal Extracts</font></a><br>
+<a href="http://www.mountainroseherbs.com/extract/extract.php"><font color="#D7AC75">Herbal Extracts and Syrups</font></a><br>
 <a href="http://www.mountainroseherbs.com/oils/herbal.php"><font color="#D7AC75">Herbal Oils</font></a><br>
 <a href="http://www.mountainroseherbs.com/tea_bev/tea_bev.php"><font color="#D7AC75">Herbal Teas</font></a><br>
 <a href="http://www.mountainroseherbs.com/candle/candle.php"><font color="#D7AC75">Incense, Resins and Candles</font></a><br>
@@ -68,13 +69,12 @@
 <a href="http://www.mountainroseherbs.com/salves/salves.php"><font color="#D7AC75">Salves &amp; Balms</font></a><br>
 <a href="http://www.mountainroseherbs.com/seeds/seeds.php"><font color="#D7AC75">Seeds</font></a><br>
 <a href="http://www.mountainroseherbs.com/tea_tool/tea_tool.php"><font color="#D7AC75">Tea Supplies</font></a><br>
-<a href="http://www.mountainroseherbs.com/women/women.php"><font color="#D7AC75">Women's Products</font></a>
 
 </p><p>
 
 
 
-<a href="http://www.mountainroseherbs.com/buyorgan.php"><img src="http://www.mountainroseherbs.com/buyorg.jpg" width="148" height="98" border="0" vspace="5" alt="The Importance Of Buying Organic"></a><br>
+<a href="http://www.mountainroseherbs.com/buyorgan.php"><img src="http://www.mountainroseherbs.com/buyorg.gif" width="147" height="98" border="0" align="middle" hspace="0" vspace="5" alt="The Importance Of Buying Organic"></a><br>
 
 <a href="http://www.mountainroseherbs.com/about/otoc.php"><img src="http://www.mountainroseherbs.com/about/otco-button.gif" width="147" height="46" border="0" align="middle" hspace="0" vspace="7" alt="Our Organics Are Certified Through OTCO">
 
@@ -84,26 +84,36 @@
 
 <a href="http://www.mountainroseherbs.com/herbedu/herbedu.php"><img src="http://www.mountainroseherbs.com/herbaled.gif" width="146" height="47" border="0" vspace="5" alt="Herbal Education Resources"></a><br>
 
-<a href="http://botanical.com/" target="botanical.com"><img src="http://www.mountainroseherbs.com/botcom.gif" width="146" height="47" border="0" vspace="5" alt="Herbal Database &amp; Profiles"></a><br>
+<a href="http://botanical.com/"><img src="http://www.mountainroseherbs.com/botcom.gif" width="146" height="47" border="0" vspace="5" alt="Herbal Database &amp; Profiles"></a><br>
+
+</p><p>
+<!-- GeoTrust True Site[tm] Smart Icon tag. Do not edit. --> <script language="JavaScript" type="text/javascript" src="//smarticon.geotrust.com/si.js"></script>
+<!-- end GeoTrust Smart Icon tag -->
 
 
 </p><p>
 </p></font></font></td><td valign="top">
 <table width="100%" border="0" cellpadding="10"><tbody><tr><td align="left" valign="top">
 
+<!-- <p>
+</td><td valign=top align=left><table border=0 cellpadding=10><tr><td  valign="top" align="left"> -->
+
 <p></p><p class="MsoNormal"><title>Mountain Rose Herbs Privacy and Security Information</title><span style="font-size:10pt;font-family:Arial">
 
 </span></p><p>
   </p><center>
     <b>This website and the technologies used to execute orders on it are double 
-    protected through both Thwarte and Stronghold security systems. These are 
-    the very same systems used to protect the majority of secure commerce sites 
-    across the internet. When you place an online order over the Internet with 
-    Mountain Rose Herbs, the connection that transmits your data is secure through 
-    SSL 128 bit encryption technology. </b> 
+    protected through both Thwarte and Stronghold security systems, and verified 
+    through third party GeoTrust certification. When you place an online order 
+    over the Internet with Mountain Rose Herbs, the connection that transmits 
+    your data is secure through SSL 128 bit encryption technology. </b> 
   </center>
 <p align="center" style="margin-bottom: 0;">&nbsp;
-</p><p align="center" style="margin-top: 0;"><img src="securesite1.jpg" alt="Secure Site" width="147" height="46" hspace="0" vspace="0"><br clear="all">
+</p><p align="center" style="margin-top: 0;"><img src="securesite1.jpg" alt="Secure Site" width="147" height="46" hspace="0" vspace="0">&nbsp;&nbsp;
+<!-- GeoTrust True Site[tm] Smart Icon tag. Do not edit. --> <script language="JavaScript" type="text/javascript" src="//smarticon.geotrust.com/si.js"></script>
+<!-- end GeoTrust Smart Icon tag -->
+
+<br clear="all">
   &nbsp; 
 </p><p><font size="5" face="Arial, Helvetica, sans-serif">Our 
   Security Policy</font> <br>
@@ -141,10 +151,14 @@
 </p><center>
 <font face="Arial,Helvetica,Sans-Serif" size="1"><b>
 <a href="http://www.mountainroseherbs.com/affiliate/affiliate.php">Affiliate Program</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.mountainroseherbs.com/employ.php">Employment Opportunities</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="http://www.mountainroseherbs.com/wholesale.php">Wholesale Opportunities</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="http://www.mountainroseherbs.com/employ.php">Employment Opportunities</a>
 </b></font><p><font face="Arial,Helvetica,Sans-Serif" size="1"><b>
 <a href="http://www.mountainroseherbs.com/privicy.php">Our Privacy and Security Policy</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.mountainroseherbs.com/return.php">Our Return Policy</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.mountainroseherbs.com/bulkherb/quality.php">Quality Control</a>
 </b>
 </font></p></center>
 
@@ -153,7 +167,7 @@
 <b><i>These pages are best viewed while sipping tea</i></b>
 </font></div><font size="2">
 <p>
-</p><div align="right"><font face="Arial,Helvetica,Sans-Serif" size="1"><b>Mountain Rose Herbs</b><br>PO Box 50220, Eugene, OR 97405<br>USA<br>(800) 879-3337<br>FAX - (510) 217-4012<br>Outside USA - (541) 741-7341<br><a href="mailto:customerservice@mountainroseherbs.com">customerservice@mountainroseherbs.com</a><hr width="250" align="right">©  Copyright Protected 2000-2004 Mountain Rose Inc<br>Site Design: <a href="http://fruitiondesign.com/">Fruition Design Collective</a></font></div></font></td></tr></tbody></table></td></tr></tbody></table></form></div>
+</p><div align="right"><font face="Arial,Helvetica,Sans-Serif" size="1"><b>Mountain Rose Herbs</b><br>PO Box 50220, Eugene, OR 97405<br>USA<br>(800) 879-3337<br>FAX - (510) 217-4012<br>Outside USA - (541) 741-7341<br><a href="mailto:customerservice@mountainroseherbs.com">customerservice@mountainroseherbs.com</a><hr width="250" align="right">©  Copyright Protected 2000-2004 Mountain Rose Inc<br>Site Design: <a href="http://fruitiondesign.com/">Fruition Design Collective</a></font></div></font></td></tr></tbody></table></td></tr></tbody></table></form></a></div><a name="top">
 
 
 
